+ address + commpany + pom refactoring